display data show like lesson name and level

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
 
     <h1>English View</h1>
-    <button onclick="fetchLevelLesson()">Word</button>
+
     
+    <p>Total Lessons: <span id="totalData">0</span></p>
+
+    <!-- Display area for lesson buttons -->
+    <div id="displayArea"></div>
+
+    <!-- Link to JavaScript file -->
     <script src="src/index.js"></script>
 </body>
 </html>
