--- a/index.html
+++ b/index.html
@@ -3,22 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Level Lessons</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>EnglishView</title>
+    <script src="src/index.js" defer></script>
+    <style>
+        /* Animation for Words */
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(10px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        .animate-fadeIn {
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        /* Text Shadow */
+        .text-shadow {
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
-<body class="p-6">
+<body class="bg-gradient-to-r from-gray-100 to-gray-300 p-6 flex flex-col items-center min-h-screen">
 
-    <h1 class="text-2xl font-bold text-center">English View</h1>
+    <!-- Heading -->
+    <h1 class="text-4xl font-extrabold text-blue-700 text-shadow mb-6">
+        Programming Hero Levels 🚀
+    </h1>
 
-    <p class="text-lg mt-4">Total Lessons: <span id="totalData" class="font-bold">0</span></p>
+    <!-- Lessons Container -->
+    <div id="displayArea" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 w-full max-w-5xl"></div>
 
-    <!-- Display area for lesson buttons -->
-    <div id="displayArea" class="flex flex-wrap gap-2 mt-4"></div>
-    
-    <!-- Word List -->
-    <div id="word-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-6"></div>
+    <!-- Total Data Count -->
+    <p id="totalData" class="text-lg font-semibold text-gray-700 mt-4"></p>
 
-    <!-- Link to JavaScript file -->
-    <script src="src/index.js"></script>
+    <!-- Words Display Section -->
+    <div id="wordsArea" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 w-full max-w-5xl mt-6 p-6 bg-white/70 backdrop-blur-lg rounded-xl shadow-xl"></div>
+
 </body>
 </html>
